# DLP-last

./: .env  .env.example  .gitignore  README.md  claude.md  openapi.json
Admin-FE/: DOCKER-SETUP.md  README-DOCKER.md  docker-compose.dev.yml  docker-compose.yml  env.example
DLP-BE/: .gitignore  ARCHITECTURE.md  CLAUDE.md  KIBANA_GUIDE.md  README.md  TESTING.md  check_model_labels.py  docker-compose.yml  download_models.py  pyproject.toml  pytest.ini  test_pii_direct.py
DLP-BE/alembic/: env.py
DLP-BE/alembic/versions/: 16a43009c50b_create_users_table.py  e31ba775f28a_create_pii_settings_table.py
DLP-BE/app/: main.py
DLP-BE/app/ai/: model_manager.py  pii_detector.py  policy_detector.py
DLP-BE/app/api/routers/: admin.py  auth.py  pii.py  pii_settings.py
DLP-BE/app/core/: config.py  dependencies.py  elasticsearch.py  security.py
DLP-BE/app/db/: base.py  session.py
DLP-BE/app/models/: __init__.py  pii_settings.py  user.py
DLP-BE/app/repository/: elasticsearch_repo.py  pii_settings_repo.py  user_repo.py
DLP-BE/app/schemas/: auth.py  log.py  pii.py  pii_settings.py
DLP-BE/app/services/: log_service.py  pii_service.py  pii_settings_service.py
DLP-BE/app/services/auth/: __init__.py  token_service.py  user_service.py
DLP-BE/app/usecases/: __init__.py  auth_usecases.py
DLP-BE/app/utils/: entity_extractor.py  ip_utils.py
DLP-BE/tests/: conftest.py  test_admin_api.py  test_elasticsearch.py  test_pii_detection.py
MODEL-fine-tuning/: README.md
proxy/: .gitignore  Dockerfile  README.md  backend.py  config.py  extractor.py  init_certs.py  logger.py  (+8 more)
(+124 files in other folders)
